<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#949494"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_title"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_margin="15dp"
        android:background="#50ffffff"
        android:hint="@string/email_hint"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_margin="15dp"
        android:background="#50ffffff"
        android:hint="@string/password_hint"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:text="@string/login_btn"
        android:textSize="18sp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:textSize="16sp"

        />


</RelativeLayout>